# cambindicator

./: LICENSE  bindicator.py  icalendar.py  main.py
python/: README.md  icalendar.py  main.py
python/test/: test_icalendar.py
rust/: Cargo.toml
rust/bindicator/: Cargo.toml
rust/bindicator/src/: lib.rs
rust/cross/: Cargo.toml  rust-toolchain.toml
rust/cross/app/: Cargo.toml
rust/cross/app/src/: lib.rs
rust/ical-parser/: Cargo.toml
rust/ical-parser/src/: lib.rs
rust/worldtime-parser/: Cargo.toml
rust/worldtime-parser/src/: lib.rs
test/: test_bindicator.py  test_icalendar.py
