[workspace]
members = ["app"]
resolver = "2"

[profile.release]
debug = true
codegen-units = 1
incremental = false
lto = 'fat'
opt-level = 's'

[profile.dev]
codegen-units = 1
incremental = false
lto = 'fat'
opt-level = 's'

[profile.test]
codegen-units = 1
incremental = false
lto = 'fat'
opt-level = 's'
