[package]
edition = "2021"
name = "cambindicator"
version = "0.1.0"
license = "BSD-2"
publish = false
authors = ["Daniel Kenyon-Jones"]


[dependencies]
embassy-embedded-hal = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy.git", features = [
    "defmt",
] }
embassy-sync = { version = "0.2.0", git = "https://github.com/embassy-rs/embassy.git", features = [
    "defmt",
] }
embassy-executor = { version = "0.2.0", git = "https://github.com/embassy-rs/embassy.git", features = [
    "nightly",
    "arch-cortex-m",
    "executor-thread",
    "executor-interrupt",
    "defmt",
    "integrated-timers",
] }
embassy-time = { version = "0.1.2", git = "https://github.com/embassy-rs/embassy.git", features = [
    "nightly",
    "unstable-traits",
    "defmt",
    "defmt-timestamp-uptime",
] }
embassy-rp = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy.git", features = [
    "defmt",
    "unstable-traits",
    "nightly",
    "unstable-pac",
    "time-driver",
    "critical-section-impl",
] }
embassy-net = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy.git", features = [
    "defmt",
    "nightly",
    "tcp",
    "dhcpv4",
    "medium-ethernet",
    "dns",
] }
embassy-futures = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy.git" }
embassy-usb = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy.git" }
embassy-usb-logger = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy.git" }
cyw43 = { git = "https://github.com/embassy-rs/embassy.git", features = [
    "defmt",
    "firmware-logs",
] }
cyw43-pio = { git = "https://github.com/embassy-rs/embassy.git", features = [
    "defmt",
    "overclock",
] }

defmt = "0.3"
defmt-rtt = "0.4"
fixed = "1.23.1"
fixed-macro = "1.2"

cortex-m = { version = "0.7.6", features = ["inline-asm"] }
cortex-m-rt = "0.7.0"
panic-probe = { version = "0.3", features = ["print-defmt"] }
futures = { version = "0.3.17", default-features = false, features = [
    "async-await",
    "cfg-target-has-atomic",
    "unstable",
] }
byte-slice-cast = { version = "1.2.0", default-features = false }
smart-leds = "0.3.0"
heapless = "0.7.15"

embedded-hal-1 = { package = "embedded-hal", version = "=1.0.0-alpha.11" }
embedded-hal-async = { version = "0.2.0-alpha.2" }
embedded-io-async = { version = "0.5.0", features = ["defmt-03"] }
static_cell = { version = "1.1", features = ["nightly"] }
log = "0.4"
pio-proc = "0.2"
pio = "0.2.1"
rand = { version = "0.8.5", default-features = false }
worldtime-parser = { path = "../../worldtime-parser" }
