[package]
edition = "2021"
name = "cambindicator"
version = "0.1.0"
license = "BSD-2"
publish = false
authors = ["Daniel Kenyon-Jones"]


[dependencies]
embassy-embedded-hal = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy.git", rev = "850fe72", features = [
    "defmt",
] }
embassy-sync = { version = "0.5.0", git = "https://github.com/embassy-rs/embassy.git", rev = "850fe72", features = [
    "defmt",
] }
embassy-executor = { version = "0.5.0", git = "https://github.com/embassy-rs/embassy.git", rev = "850fe72", features = [
    "task-arena-size-32768",
    "arch-cortex-m",
    "executor-thread",
    "executor-interrupt",
    "defmt",
    "integrated-timers",
] }
embassy-time = { version = "0.3.0", git = "https://github.com/embassy-rs/embassy.git", rev = "850fe72", features = [
    "defmt",
    "defmt-timestamp-uptime",
] }
embassy-rp = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy.git", rev = "850fe72", features = [
    "defmt",
    "unstable-pac",
    "time-driver",
    "critical-section-impl",
] }
embassy-net = { version = "0.4.0", git = "https://github.com/embassy-rs/embassy.git", rev = "850fe72", features = [
    "defmt",
    "tcp",
    "dhcpv4",
    "medium-ethernet",
    "dns",
] }
embassy-futures = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy.git", rev = "850fe72" }
cyw43 = { git = "https://github.com/embassy-rs/embassy.git", rev = "850fe72", features = [
    "defmt",
    "firmware-logs",
] }
cyw43-pio = { git = "https://github.com/embassy-rs/embassy.git", rev = "850fe72", features = [
    "defmt",
    "overclock",
] }

defmt = "0.3"
defmt-rtt = "0.4"
fixed = "1.23.1"
fixed-macro = "1.2"

cortex-m = { version = "0.7.6", features = ["inline-asm"] }
cortex-m-rt = "0.7.0"
panic-probe = { version = "0.3", features = ["print-defmt"] }
futures = { version = "0.3.17", default-features = false, features = [
    "async-await",
    "cfg-target-has-atomic",
    "unstable",
] }
byte-slice-cast = { version = "1.2.0", default-features = false }
smart-leds = "0.4"
heapless = "0.8"
embedded-hal-1 = { package = "embedded-hal", version = "1.0" }
embedded-hal-async = { version = "1.0" }
embedded-io-async = { version = "0.6.1", features = ["defmt-03"] }
static_cell = { version = "2.0" }
portable-atomic = { version = "1.5", features = ["critical-section"] }
log = "0.4"
pio-proc = "0.2"
pio = "0.2.1"
rand = { version = "0.8.5", default-features = false }
worldtime-parser = { path = "../../worldtime-parser" }
ical-parser = { path = "../../ical-parser" }
nom = { version = "7.1.3", default-features = false }
